# SpidrPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: build.yml
lib/HDI/include/hdi/data/: panel_data.h
lib/HDI/include/hdi/dimensionality_reduction/: embedding_equalizer.h  hd_joint_probability_generator_inl.h  hierarchical_sne.h  sparse_tsne_user_def_probabilities.cpp  sparse_tsne_user_def_probabilities_inl.h  tsne.cpp  tsne_random_walks.cpp
lib/HDI/include/hdi/utils/: CMakeLists.txt  cout_log.cpp  log_progress.cpp
src/: AdvancedTsneSettingsAction.cpp  AdvancedTsneSettingsAction.h  AnalysisParameters.h  BackgroundSelectionAction.cpp  BackgroundSelectionAction.h  DimensionSelectionAction.cpp  DimensionSelectionAction.h  DimensionSelectionWidget.cpp  DimensionSelectionWidget.h  DistanceCalculation.cpp  DistanceCalculation.h  EvalUtils.h  FeatureExtraction.cpp  FeatureExtraction.h  FeatureUtils.cpp  FeatureUtils.h  GeneralSpidrSettingsAction.cpp  GeneralSpidrSettingsAction.h  HistBinAction.cpp  HistBinAction.h  KNNUtils.cpp  KNNUtils.h  SpidrAnalysis.cpp  SpidrAnalysis.h  SpidrAnalysisQt.cpp  SpidrAnalysisQt.h  SpidrAnalysisQtWrapper.cpp  SpidrAnalysisQtWrapper.h  SpidrComputationAction.cpp  SpidrComputationAction.h  SpidrOptions.h  SpidrParameters.h  SpidrPlugin.cpp  SpidrPlugin.h  SpidrPlugin.json  SpidrSettingsAction.cpp  SpidrSettingsAction.h  SpidrSettingsWidget.cpp  SpidrSettingsWidget.h  TsneAnalysis.cpp  (+10 more)
